[workspace]

members = [
    # Prepares some bundles. The main reason this is split off is to improve compilation times.
    "dsf_precompile",
    # Contains all the core game code.
    "dsf_core",
    # Contains all code partaining to the level editor.
    "dsf_editor",
    # Contains all code partaining to the automated checks.
    "dsf_checks",
    # The main binary, contains the starting point of the application. Glues everything together.
    # If you're looking to change vulkan to metal, go to this crate's Cargo.toml. This is the only place where that
    # feature is specified.
    "dwarf_seeks_fortune",
]
