[package]
name = "dwarf_seeks_fortune"
version = "0.1.0"
authors = ["Jazarro <nospam.git@boschman.io>"]
edition = "2018"

[dependencies]

# ---------- Mac users, configuration required: -------------
# -----------------------------------------------------------
# Windows / Linux users, use the following line:
amethyst = { version = "=0.15.3", features = ["vulkan"] }
# Mac users, use the following line:
#amethyst = {version = "=0.15.3", features = ["metal"]}
# -----------------------------------------------------------
# -----------------------------------------------------------

log = { version = "0.4.6", features = [] }
serde = { version = "1.0", features = ["derive"] }

dsf_precompile = { path = "dsf_precompile" }
dsf_core = { path = "dsf_core" }
dsf_editor = { path = "dsf_editor" }
dsf_checks = { path = "dsf_checks" }


[workspace]
members = [
    # Prepares some bundles. The main reason this is split off is to improve compilation times.
    "dsf_precompile",
    # Contains all the core game code.
    "dsf_core",
    # Contains all code partaining to the level editor.
    "dsf_editor",
    # Contains all code partaining to the automated checks.
    "dsf_checks",
]
