[package]
name = "dsf_checks"
version = "0.1.0"
authors = ["Jazarro <nospam.git@boschman.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsf_precompile = { path = "../dsf_precompile" }
dsf_core = { path = "../dsf_core" }

amethyst = { version = "0.15.0", features = [] }

log = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }