[package]
name = "dsf_precompile"
version = "0.1.0"
authors = ["Jazarro <nospam.git@boschman.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Amethyst version and features used in this workspace are specified in the dwarf_seeks_fortune crate.
amethyst = { version = "*" }

serde = { version = "1.0", features = ["derive"] }
