[package]
name = "dwarf_seeks_fortune"
version = "0.1.0"
authors = ["Jazarro <nospam.git@boschman.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dsf_precompile = { path = "../dsf_precompile" }
dsf_core = { path = "../dsf_core" }
dsf_editor = { path = "../dsf_editor" }
dsf_checks = { path = "../dsf_checks" }

# Windows / Linux users, use the following line:
amethyst = { version = "=0.15.1", features = ["vulkan"] }
# Mac users, use the following line:
#amethyst = {version = "=0.15.1", features = ["metal"]}

log = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
