[package]
name = "precompile"
version = "0.1.0"
authors = ["Jazarro <nospam.git@boschman.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dependencies.amethyst]
version = "0.15.0"
features = ["vulkan"]
